--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path
-        name="files_root"
-        path="Android/data/com.rayjin.seai/" />
-
-    <external-path
-        name="external"
-        path="SEAI" />
+    <external-path name="files_root" path="Android/data/com.rayjin.seai/" />
+    <external-path name="external" path="SEAI/" />
+    <external-path name="Picture" path="Pictures/SEAI/"/>
 
 </paths>
