增加了侧滑功能 完善界面设计

--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -77,18 +77,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/crossmark" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintDimensionRatio="H,34:12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintDimensionRatio="H,34:20"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/linearLayout">-->
             <LinearLayout
                 android:id="@+id/linearLayout1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="4"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -114,12 +115,12 @@
                         app:layout_constraintStart_toEndOf="@id/linearLayoutSet"
                         app:srcCompat="@drawable/setting" />
 
-                    <Button
+                    <TextView
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnSet"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="6"
+                        android:layout_weight="3"
                         android:backgroundTint="@color/white"
                         android:text="设置"
                         android:textColor="@color/black"
@@ -149,12 +150,12 @@
                         android:layout_marginLeft="20dp"
                         app:srcCompat="@drawable/feedback" />
 
-                    <Button
+                    <TextView
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnFeedback"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="6"
+                        android:layout_weight="3"
                         android:backgroundTint="@color/white"
                         android:text="反馈"
                         android:textColor="@color/black"
@@ -183,12 +184,12 @@
                             android:layout_marginLeft="20dp"
                             app:srcCompat="@drawable/upgrade" />
 
-                        <Button
+                        <TextView
                             style="?android:attr/borderlessButtonStyle"
                             android:id="@+id/BtnUpgrade"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="6"
+                            android:layout_weight="3"
                             android:textAlignment="textStart"
                             android:backgroundTint="@color/white"
                             android:text="升级"
@@ -221,14 +222,15 @@
                         app:layout_constraintStart_toStartOf="@id/BtnSet"
                         app:srcCompat="@drawable/about" />
 
-                    <Button
+                    <TextView
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnAbout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="6"
+                        android:layout_weight="3"
                         android:backgroundTint="@color/white"
                         android:text="关于"
+                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textAlignment="textStart"
@@ -241,12 +243,12 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="10"/>-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
