--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -69,7 +69,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/closeButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="25dp"
@@ -98,7 +98,7 @@
                 <LinearLayout
                     android:id="@+id/linearLayoutSet"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1">
 
                     <LinearLayout
@@ -120,7 +120,7 @@
                         android:id="@+id/BtnSet"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
+                        android:layout_weight="7"
                         android:backgroundTint="@color/white"
                         android:text="设置"
                         android:textColor="@color/black"
@@ -135,7 +135,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1">
 
                     <LinearLayout
@@ -155,7 +155,7 @@
                         android:id="@+id/BtnFeedback"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
+                        android:layout_weight="7"
                         android:backgroundTint="@color/white"
                         android:text="反馈"
                         android:textColor="@color/black"
@@ -170,7 +170,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -189,7 +189,7 @@
                             android:id="@+id/BtnUpgrade"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="3"
+                            android:layout_weight="7"
                             android:textAlignment="textStart"
                             android:backgroundTint="@color/white"
                             android:text="升级"
@@ -204,7 +204,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1">
 
                     <LinearLayout
@@ -227,10 +227,9 @@
                         android:id="@+id/BtnAbout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
+                        android:layout_weight="7"
                         android:backgroundTint="@color/white"
                         android:text="关于"
-                        android:textSize="16sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textAlignment="textStart"
@@ -241,14 +240,13 @@
 
                 </LinearLayout>
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="10"/>
+
             </LinearLayout>
 
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_weight="10"/>-->
-
-<!--        </LinearLayout>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
