--- a/app/src/main/res/layout/sliding_menu.xml
+++ b/app/src/main/res/layout/sliding_menu.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:scrollbars="none" >
+    android:scrollbars="none"
+    android:id="@+id/slideView">
 
     <LinearLayout
         android:layout_width="wrap_content"
