--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -247,6 +247,28 @@
 
             </LinearLayout>
 
+        <com.rayjin.seai.CircleImageView
+            android:id="@+id/avatar2"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/default_avatar2"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/view3"/>
+
+        <TextView
+            android:id="@+id/username_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/avatar2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="未登录"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
