--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -9,5 +9,5 @@
         android:left="2dp"
         android:right="2dp"
         android:top="1dp"></padding>
-    <solid android:color="@color/white" />
+    <solid android:color="@color/light_white" />
 </shape>
