--- a/app/src/main/res/drawable/radiusview.xml
+++ b/app/src/main/res/drawable/radiusview.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp" />
-    <solid android:color="#F0FFFFFF" />
+    <solid android:color="@color/white" />
 </shape>
