--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -5,12 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView2"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="fill_parent"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/view_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent">   
 
         <View
             android:id="@+id/view3"
@@ -85,167 +86,136 @@
 <!--            app:layout_constraintDimensionRatio="H,34:20"-->
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toBottomOf="@id/linearLayout">-->
-            <LinearLayout
-                android:id="@+id/linearLayout1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/linearLayout">
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/linearLayout1"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/linearLayout">-->
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/linearLayoutSet"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/linearLayout">-->
 
                 <LinearLayout
-                    android:id="@+id/linearLayoutSet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
+                    android:id="@+id/setitem">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/imageView6"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
                         android:layout_marginLeft="20dp"
-                        app:layout_constraintBottom_toTopOf="@id/linearLayout"
-                        app:layout_constraintStart_toEndOf="@id/linearLayoutSet"
                         app:srcCompat="@drawable/setting" />
 
                     <TextView
-                        style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnSet"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="7"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
                         android:text="设置"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
                         android:textAlignment="textStart"
-                        app:layout_constraintStart_toEndOf="@id/imageView6"
-                        app:layout_constraintBottom_toBottomOf="@id/imageView6"
-                        app:layout_constraintTop_toTopOf="@id/imageView6"/>
-                    </LinearLayout>
-
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+<!--            </LinearLayout>-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/setitem"
+                    android:id="@+id/feedbackitem">
+
                     <ImageView
                         android:id="@+id/imageView7"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
                         android:layout_marginLeft="20dp"
                         app:srcCompat="@drawable/feedback" />
 
                     <TextView
-                        style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnFeedback"
-                        android:layout_width="0dp"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="7"
                         android:backgroundTint="@color/white"
                         android:text="反馈"
+                        android:textAlignment="textStart"
                         android:textColor="@color/black"
                         android:textStyle="bold"
-                        android:textAlignment="textStart"
-                        app:layout_constraintStart_toEndOf="@id/imageView6"
                         app:layout_constraintBottom_toBottomOf="@id/imageView6"
-                        app:layout_constraintTop_toTopOf="@id/imageView6"/>
-                    </LinearLayout>
-
+                        app:layout_constraintStart_toEndOf="@id/imageView6"
+                        app:layout_constraintTop_toTopOf="@id/imageView6" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-                    <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/feedbackitem"
+                    android:id="@+id/upgradeitem">
+
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:scaleType="centerInside"
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
+                        android:layout_marginLeft="20dp"
+                        app:srcCompat="@drawable/upgrade" />
+
+                    <TextView
+                        android:id="@+id/BtnUpgrade"
+                        style="?android:attr/borderlessButtonStyle"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:id="@+id/imageView8"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="20dp"
-                            app:srcCompat="@drawable/upgrade" />
-
-                        <TextView
-                            style="?android:attr/borderlessButtonStyle"
-                            android:id="@+id/BtnUpgrade"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="7"
-                            android:textAlignment="textStart"
-                            android:backgroundTint="@color/white"
-                            android:text="升级"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toEndOf="@id/imageView6"
-                            app:layout_constraintBottom_toBottomOf="@id/imageView6"
-                            app:layout_constraintTop_toTopOf="@id/imageView6"/>
-                    </LinearLayout>
-
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/white"
+                        android:text="升级"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@id/imageView6"
+                        app:layout_constraintStart_toEndOf="@id/imageView6"
+                        app:layout_constraintTop_toTopOf="@id/imageView6" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/upgradeitem">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/imageView9"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:scaleType="centerInside"
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
                         android:layout_marginLeft="20dp"
-                        app:layout_constraintTop_toTopOf="@id/BtnSet"
-                        app:layout_constraintBottom_toBottomOf="@id/BtnSet"
-                        app:layout_constraintStart_toStartOf="@id/BtnSet"
                         app:srcCompat="@drawable/about" />
 
                     <TextView
-                        style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/BtnAbout"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="7"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
                         android:text="关于"
+                        android:textAlignment="textStart"
                         android:textColor="@color/black"
                         android:textStyle="bold"
-                        android:textAlignment="textStart"
-                        app:layout_constraintStart_toEndOf="@id/imageView6"
                         app:layout_constraintBottom_toBottomOf="@id/imageView6"
-                        app:layout_constraintTop_toTopOf="@id/imageView6"/>
-                    </LinearLayout>
-
+                        app:layout_constraintStart_toEndOf="@id/imageView6"
+                        app:layout_constraintTop_toTopOf="@id/imageView6" />
                 </LinearLayout>
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="10"/>
-
-            </LinearLayout>
 
         <com.rayjin.seai.CircleImageView
             android:id="@+id/avatar2"
@@ -267,6 +237,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:textStyle="bold"
             android:textSize="25sp"
+            android:textColor="@color/black"
             android:text="未登录"/>
 
 
