--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_purple">#55C4D0FB</color>
+    <color name="light_white">#FFFFFFFF</color>
     <color name="light_blue">#55D1E7FE</color>
 </resources>
