--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_purple">#55C4D0FB</color>
     <color name="light_blue">#55D1E7FE</color>
+    <color name="transparent">#22000000</color>
+
 </resources>
