--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
-            <View
+            k<View
                 android:id="@+id/view1"
                 android:layout_width="0dp"
                 android:layout_height="250dp"
@@ -46,6 +46,7 @@
                 android:background="@drawable/shape_white_corner"/>
 
             <TextView
+                android:id="@+id/textview_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="识别结果"
@@ -54,7 +55,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/textview1"
                 android:layout_marginTop="35dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="30dp"
+                />
+            <TextView
+                android:id="@+id/textview_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/textview_1"
+                app:layout_constraintStart_toStartOf="@+id/view1"
+                android:text="识别中"
+                android:textSize="30sp"
+                android:textColor="@color/black"
+
                 />
 
             <View
@@ -77,7 +89,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/view1"
                 android:layout_marginTop="45dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="30dp"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
