--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -84,11 +84,18 @@
                 android:padding="15dp"
                 android:text="识别中"
                 android:textSize="18sp"
-                android:textColor="@color/black"
-
+                android:textColor="@color/black" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/view1"
+                android:text="有问题？ 点我反馈..."
+                app:layout_constraintEnd_toEndOf="@+id/view1"
+                android:textColor="@color/purple"
+                android:textSize="14sp"
+                android:id="@+id/fanKui"
+                android:layout_marginTop="5dp"
                 />
-
-
 
 
 
@@ -99,7 +106,7 @@
                 android:text="百度百科"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/textview_2"
+                app:layout_constraintTop_toBottomOf="@+id/fanKui"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="30dp"
