Revert "修复反馈界面bug"
This reverts commit 9e77c30009ddd258f27cf5db6e0c486246ccbe36.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,7 @@
     <color name="red">#FFFF0000</color>
     <color name="black">#FFFFFFFF</color>
     <color name="white">#303030</color>
+    <color name="gray">#FF363636</color>
     <color name="light_white">#FFFFFFFF</color>
     <color name="light_purple">#55C4D0FB</color>
     <color name="light_blue">#55D1E7FE</color>
