--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="vertical">
 
-    >
     <ImageView
         android:id="@+id/pic"
         android:layout_width="match_parent"
@@ -63,14 +62,14 @@
                 android:layout_marginStart="30dp" />
 
             <View
-            android:id="@+id/view1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@+id/textview_2"
-            app:layout_constraintStart_toStartOf="@id/textview_2"
-            app:layout_constraintEnd_toEndOf="@id/textview_2"
-            app:layout_constraintBottom_toBottomOf="@id/textview_2"
-            android:background="@drawable/shape_white_corner"/>
+                android:id="@+id/view1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@+id/textview_2"
+                app:layout_constraintStart_toStartOf="@id/textview_2"
+                app:layout_constraintEnd_toEndOf="@id/textview_2"
+                app:layout_constraintBottom_toBottomOf="@id/textview_2"
+                android:background="@drawable/shape_white_corner"/>
 
             <TextView
                 android:id="@+id/textview_2"
