优化权限申请体验 除去了数不清的warning 美化了代码格式 解决了部分toast的bug

--- a/app/src/main/res/layout/forget.xml
+++ b/app/src/main/res/layout/forget.xml
@@ -23,7 +23,7 @@
         android:id="@+id/forget_view"
         android:layout_width="300dp"
         android:layout_height="0dp"
-        android:background="@drawable/viewbg_plus"
+        android:background="@drawable/view_bg_plus"
         app:layout_constraintDimensionRatio="H,4:5"
         app:layout_constraintTop_toBottomOf="@id/textView4"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
         android:id="@+id/old_forget"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:background="@drawable/editview_bg"
+        android:background="@drawable/edit_view_bg"
         android:inputType="textPassword"
         android:hint="请输入原始密码"
         android:textSize="14sp"
@@ -86,7 +86,7 @@
         android:id="@+id/password_et_forget"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:background="@drawable/editview_bg"
+        android:background="@drawable/edit_view_bg"
         android:inputType="textPassword"
         android:hint="请输入新密码"
         android:textSize="14sp"
@@ -112,7 +112,7 @@
         android:id="@+id/password2_et_forget"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:background="@drawable/editview_bg"
+        android:background="@drawable/edit_view_bg"
         android:inputType="textPassword"
         android:hint="请再输入新密码"
         android:textSize="14sp"
