--- a/app/src/main/res/layout/selectphoto.xml
+++ b/app/src/main/res/layout/selectphoto.xml
@@ -8,7 +8,7 @@
         android:id="@+id/menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/topradius"
+        android:background="@drawable/top_radius"
         android:translationZ="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="16:9" />
@@ -18,7 +18,7 @@
         android:layout_width="40dp"
         android:layout_height="6dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/smallbar"
+        android:background="@drawable/small_bar"
         android:translationZ="3dp"
         app:layout_constraintEnd_toEndOf="@id/menu"
         app:layout_constraintStart_toStartOf="@id/menu"
@@ -29,6 +29,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:translationZ="3dp"
+        android:contentDescription="@string/LocalPhoto"
         app:layout_constraintBottom_toTopOf="@id/album_tv"
         app:layout_constraintEnd_toStartOf="@id/take"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -42,19 +43,20 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:translationZ="3dp"
+        android:contentDescription="@string/TakeToGet"
         app:layout_constraintBottom_toTopOf="@id/take_tv"
         app:layout_constraintEnd_toEndOf="@id/menu"
         app:layout_constraintStart_toEndOf="@id/album"
         app:layout_constraintTop_toBottomOf="@id/bar"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/takephoto" />
+        app:srcCompat="@drawable/take_photo" />
 
     <TextView
         android:id="@+id/album_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="本地相册"
+        android:text="@string/LocalPhoto"
         android:textColor="@color/black"
         android:textSize="14sp"
         android:translationZ="3dp"
@@ -68,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="拍照获取"
+        android:text="@string/TakeToGet"
         android:textColor="@color/black"
         android:textSize="14sp"
         android:translationZ="3dp"
