--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -11,22 +11,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/view_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white">
-
-
 
         <View
             android:id="@+id/view3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:background="@drawable/shape_botton_corners"
+            android:background="@drawable/view_shape_blue"
             app:layout_constraintDimensionRatio="H,16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -49,7 +46,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2.5"
-                    app:layout_constraintDimensionRatio="H,16:9" />
+                    app:layout_constraintDimensionRatio="H,16:9"
+                    tools:ignore="NestedWeights" />
 
 
                 <RelativeLayout
@@ -63,38 +61,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
-                                        <RelativeLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:id="@+id/text_totallayout"
-                                            android:layout_centerVertical="true">
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/Rl_text"
+                        android:layout_centerVertical="true">
 
-                                            <TextView
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:id="@+id/welcome"
-                                                android:text="Welcome!"
-                                                android:textSize="23sp"
-                                                android:textColor="@color/black"
-                                                android:layout_marginLeft="25dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/welcome"
+                            android:text="@string/welcome2"
+                            android:textSize="23sp"
+                            android:textColor="@color/black"
+                            android:layout_marginStart="25dp"/>
 
-                                            <TextView
-                                                android:id="@+id/welcome_user"
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:layout_below="@id/welcome"
-                                                android:layout_marginBottom="40dp"
-                                                android:layout_toEndOf="@id/welcome"
-                                                android:text="未登录"
-                                                android:textColor="@color/black"
-                                                android:textSize="30sp"
-                                                android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/welcome_user"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/welcome"
+                            android:layout_marginBottom="40dp"
+                            android:layout_toEndOf="@id/welcome"
+                            android:text="@string/UnLogin"
+                            android:textColor="@color/black"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
 
-                                        </RelativeLayout>
-
+                    </RelativeLayout>
 
                 </RelativeLayout>
-
 
             </LinearLayout>
 
@@ -108,7 +104,7 @@
                 android:id="@+id/signIn"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -120,18 +116,19 @@
             android:id="@+id/menuButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/menu" />
+            app:srcCompat="@drawable/menu"
+            android:contentDescription="@string/menu" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Observe模式"
+            android:layout_marginStart="20dp"
+            android:text="@string/ObserveMode"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -156,6 +153,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:translationZ="7dp"
+            android:contentDescription="@string/ObserveMode"
             app:layout_constraintBottom_toBottomOf="@id/view4"
             app:layout_constraintLeft_toLeftOf="@id/view4"
             app:layout_constraintRight_toRightOf="@id/view4"
@@ -166,9 +164,9 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:text="图片识别"
+            android:text="@string/ImgRec"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -191,7 +189,7 @@
             android:layout_width="140dp"
             android:layout_height="155dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/shape_lightpurple_corner"
+            android:background="@drawable/shape_light_purple_corner"
             app:layout_constraintDimensionRatio="H,3:4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/view5"
@@ -226,7 +224,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="动物"
+            android:text="@string/Animal"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -239,7 +237,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="植物"
+            android:text="@string/Plant"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -251,6 +249,7 @@
             android:id="@+id/imageView4"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/Animal"
             app:srcCompat="@drawable/animal_img"
             app:layout_constraintBottom_toBottomOf ="@id/view7"
             app:layout_constraintTop_toTopOf="@id/view7"
@@ -261,6 +260,7 @@
             android:id="@+id/imageView5"
             android:layout_width="65dp"
             android:layout_height="65dp"
+            android:contentDescription="@string/Plant"
             app:srcCompat="@drawable/plant_img"
             app:layout_constraintBottom_toBottomOf ="@id/view8"
             app:layout_constraintTop_toTopOf="@id/view8"
