--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -10,18 +9,17 @@
     <ImageView
         android:id="@+id/pic"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:contentDescription="@string/Picture" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/gray"
-            >
+            android:background="@color/gray">
 
             <ProgressBar
                 android:indeterminate="false"
@@ -39,7 +37,7 @@
                 android:id="@+id/textview1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="准确率:100%"
+                android:text="@string/Accuracy"
                 android:textColor="@color/black"
                 android:textSize="23sp"
                 android:textStyle="bold"
@@ -52,7 +50,7 @@
                 android:id="@+id/textview_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="识别结果"
+                android:text="@string/RecRes"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -83,14 +81,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
                 android:padding="15dp"
-                android:text="识别中..."
+                android:text="@string/Recognizing"
                 android:textSize="18sp"
                 android:textColor="@color/black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/view1"
-                android:text="识别不准确？ 点我反馈"
+                android:text="@string/FeedBack2"
                 app:layout_constraintEnd_toEndOf="@+id/view1"
                 android:textColor="@color/purple"
                 android:textSize="16sp"
@@ -100,12 +98,12 @@
 
 
             <TextView
-                android:id="@id/baike"
+                android:id="@id/BaiKe"
                 android:layout_width="130dp"
                 android:layout_height="28dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
-                android:text="百度百科"
+                android:text="@string/Wiki"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -118,13 +116,13 @@
                 android:minHeight="100dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
-                app:layout_constraintTop_toBottomOf="@+id/baike"
+                app:layout_constraintTop_toBottomOf="@+id/BaiKe"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
-                android:text="暂无"
+                android:text="@string/None"
                 android:padding="15dp"
                 android:textColor="@color/black"
                 android:background="@drawable/shape_white_corner"/>
