--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -35,7 +35,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="10dp"
         android:text="设  置"
-        android:textColor="@color/black"
+        android:textColor="@color/always_black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/radiusview"
+        android:background="@drawable/radius_view"
         android:elevation="3dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline4"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
