--- a/app/src/main/res/layout/sliding_menu.xml
+++ b/app/src/main/res/layout/sliding_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.rayjin.seai.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.rayjin.seai.SlidingMenu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:scrollbars="none"
@@ -14,7 +14,7 @@
         <include layout="@layout/menu_bar" />
 
         <include layout="@layout/main_view" />
-    </LinearLayout>
 
+    </LinearLayout>
 
 </com.rayjin.seai.SlidingMenu>
