优化项目结构 新增app图标 完成obverse 模式 demo 加入基于pytorch的识别demo

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <com.rayjin.seai.StackCard
+    <com.rayjin.seai.View.StackCard
         android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -292,5 +292,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </com.rayjin.seai.StackCard>
+    </com.rayjin.seai.View.StackCard>
 </androidx.constraintlayout.widget.ConstraintLayout>
