--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -56,7 +56,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <com.rayjin.seai.MainView
+                    <com.rayjin.seai.View.MainView
                         android:id="@+id/view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
@@ -100,7 +100,7 @@
                 android:layout_weight="3"
                 app:layout_constraintDimensionRatio="H,16:9" />
 
-            <com.rayjin.seai.CircleImageView
+            <com.rayjin.seai.View.CircleImageView
                 android:id="@+id/signIn"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
