--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -46,7 +46,7 @@
                     android:layout_weight="2.5"
                     app:layout_constraintDimensionRatio="H,16:9" />
 
-                <com.rayjin.seai.MainView
+                <com.rayjin.seai.View.MainView
                     android:id="@+id/view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -190,7 +190,7 @@
                         app:layout_constraintTop_toTopOf="@id/imageView6" />
                 </LinearLayout>
 
-        <com.rayjin.seai.CircleImageView
+        <com.rayjin.seai.View.CircleImageView
             android:id="@+id/avatar2"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
