--- a/app/src/main/res/layout/sliding_menu.xml
+++ b/app/src/main/res/layout/sliding_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.rayjin.seai.SlidingMenu
+<com.rayjin.seai.View.SlidingMenu
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
@@ -17,4 +17,4 @@
 
     </LinearLayout>
 
-</com.rayjin.seai.SlidingMenu>
+</com.rayjin.seai.View.SlidingMenu>
